Use relative paths in config file

konsolerc uses in 'Favorites Profiles' and 'Profile Shortcuts' the full
path.  Changing this to relative path (if in a KDE location) allows
one user can copy then to another.

FIXED-IN: 4.9
BUG: 283102
REVIEW: 102749